data/tests/errors/sequencing-composition.ng
S1 := _ _ ;
S2 := _ # ;
S3 := # _ ;
S4 := # # ;
